--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Teste 2</title>
+    <title>GitHub Teste 3</title>
 </head>
 <body>
-    <h1>GitHub Teste</h1>
+    <h1>GitHub Teste 3</h1>
     <p>Hello</p>
 </body>
 </html>
